<resources>
    <string name="mapbox_access_token">pk.eyJ1Ijoic2F0eWE4NyIsImEiOiJja3k5Z3U4cmUwNjdjMnVxbHFod2d5Z3dmIn0.5kf5_92mkY7RFkWg4_Efqg</string>
    <string name="app_name">GoesJogja</string>
    <string name="email">Email</string>
    <string name="password">********</string>
    <string name="login">Log In</string>
    <string name="login1">\u0020\u0020Log In</string>
    <string name="signup">Sign Up</string>
    <string name="signup1">\u0020\u0020Sign Up</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="daftar">Daftar</string>
    <string name="lupasandi">\u0020\u0020Lupa Sandi</string>
    <string name="tv_lupasandi">Masukkan email Anda untuk menerima kode verifikasi</string>

    <!---->
    <string name="t_mail">Masukan Email</string>
    <string name="in_mail">Email atau No. Telp</string>
    <string name="t_sandi">Kata Sandi</string>
    <string name="t_konfirmasi_sandi">Konfirmasi Kata Sandi</string>
    <string name="in_sandi">**********</string>
    <string name="no_account">Belum punya akun?</string>
    <string name="yes_account">Sudah punya akun?</string>
    <string name="telp">No. Telp</string>
    <string name="nomor">1234567890</string>
    <string name="buatAkun">Buat Akun</string>
    <string name="register_success">Registrasi Sukses</string>

    <!--ganti ke indo -->
    <string name="err_msg_enter_first_name">Mohon masukan nama depan.</string>
    <string name="err_msg_enter_last_name">Mohon masukan nama belakang.</string>
    <string name="err_msg_enter_email">Mohon masukan email.</string>
    <string name="err_msg_enter_password">Mohon masukan kata sandi.</string>
    <string name="err_msg_enter_confirm_password">Mohon masukan konfirmasi kata sandi.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Kata Sandi tidak cocok.</string>
    <string name="err_msg_agree_terms_and_condition">Mohon setujui syarat dan ketentuan.</string>
    <string name="data_valid">Detail Anda valid.</string>

    <string name="daftar_sukses">Berhasil Daftar</string>
    <!---->
    <string name="loading">Loading</string>
    <string name="klik_2Kali">Klik kembali 2 kali untuk keluar</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="laki_laki">Laki Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="gagal_login">Email atau password salah</string>

    <string name="reset_password">Reset Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="izin_penyimpanan_ditolak">Izin Penyimpanan Ditolak</string>
    <string name="gagal_pilih_gambar">Gagal memilih gambar</string>
    <string name="err_pesan_nomor_telepon">Masukkan nomor telepon</string>
    <string name="profile_sukses">Profile tersimpan</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_order">Order</string>
    <string name="title_profile">Profile</string>
    <string name="title_wisata">Wisata Yogyakarta</string>
    <string name="title_event">Event</string>
    <string name="title_kuliner">Kuliner</string>
    <string name="title_hotel">Hotel</string>

    <string name="name">Satya Nurhutama</string>
    <string name="email_user">satyanurhutama@gmail.com</string>
    <string name="kosong">Kosong</string>
    <string name="log_out">Log Out</string>
    <string name="edit">Edit Profile</string>
    <string name="user">user</string>
    <string name="admin">Admin</string>
    <string name="title_activity_home_admin">MainActivity</string>
    <string name="title_pesanan">Pesanan</string>
    <string name="nama_wisata">Nama Wisata</string>
    <string name="deskripsi_wisata">Deskripsi Wisata</string>
    <string name="harga_tiket">Harga Tiket</string>
    <string name="lokasi">Lokasi</string>
    <string name="tambah">Tambah</string>
    <string name="yes">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="Hapus">hapus</string>
    <string name="edit_wisata">Edit</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="cart">Cart</string>
    <string name="checkout">Checkout</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sem nunc vitae egestas ipsum posuere. Diam orci, aliquam, tempus, nec a nec accumsan ac. Vitae in sed aliquam nulla risus, praesent. Integer consectetur diam sit vel, felis.</string>
    <string name="hapus">Apakah anda yakin ingin menghapus?</string>
    <string name="berhasil_hapus">Wisata Terhapus</string>
    <string name="gambar_kosong">Wajib menambahkan gambar</string>
    <string name="nama_kosong">Nama wisata tidak boleh kosong</string>
    <string name="deskripsi_kosong">Deskripsi wisata tidak boleh kosong</string>
    <string name="harga_kosong">Harga wisata tidak boleh kosong</string>
    <string name="lokasi_kosong">Lokasi wisata tidak boleh kosong</string>
    <string name="wisata_sukses">Wisata berhasil ditambah</string>

</resources>