<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.activity.RegisterAdminActivity">
    <TextView
        android:id="@+id/back_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_back"
        android:fontFamily="@font/robotoslab_bold"
        android:text="@string/signup1"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_top" />

    <TextView
        android:id="@+id/tvNamaDepan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/robotoslab_reg"
        android:text="@string/nama_depan"
        android:textColor="@color/black"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_signup" />

    <EditText
        android:id="@+id/et_namaDepan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_bg"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        android:hint="@string/nama_depan"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/tvNamaDepan" />

    <TextView
        android:id="@+id/tvNamaBelakang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/robotoslab_reg"
        android:text="@string/nama_belakang"
        android:textColor="@color/black"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_namaDepan" />

    <EditText
        android:id="@+id/et_namaBelakang"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_bg"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        android:hint="@string/nama_belakang"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/tvNamaBelakang" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/robotoslab_reg"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_namaBelakang" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_bg"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        android:hint="@string/email"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/robotoslab_reg"
        android:text="@string/telp"
        android:textColor="@color/black"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_bg"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        android:hint="@string/nomor"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/tvPhone" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/robotoslab_reg"
        android:text="@string/t_sandi"
        android:textColor="@color/black"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_phone" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_bg"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        android:hint="@string/in_sandi"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    <TextView
        android:id="@+id/tvConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/robotoslab_reg"
        android:text="@string/t_konfirmasi_sandi"
        android:textColor="@color/black"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <EditText
        android:id="@+id/et_confirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_bg"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        android:hint="@string/in_sandi"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmPassword" />

    <CheckBox
        android:id="@+id/cb_syaratKetentuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/robotoslab_reg"
        android:text="Saya setuju dengan syarat dan\nketentuan yang ada"
        android:textAlignment="center"
        android:textSize="11sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/et_confirmPassword" />

    <Button
        android:id="@+id/btnDaftar"
        android:layout_width="217dp"
        android:layout_height="40dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/robotoslab_bold"
        android:text="@string/buatAkun"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/cb_syaratKetentuan" />

    <TextView
        android:id="@+id/tv_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/robotoslab_reg"
        android:text="@string/no_account"
        android:textColor="@color/colorSecondaryText"
        android:textSize="11dp"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/btnDaftar" />

    <TextView
        android:id="@+id/tv_daftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/robotoslab_bold"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textSize="11dp"
        app:layout_constraintStart_toEndOf="@+id/tv_no_account"
        app:layout_constraintTop_toBottomOf="@+id/btnDaftar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="33dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="33dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="24dp" />

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/til_namaDepan"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/nama_depan"-->
<!--        tools:ignore="MissingConstraints">-->

<!--        <EditText-->
<!--            android:id="@+id/et_namaDepan"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:inputType="text" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/til_namaBelakang"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/nama_belakang"-->
<!--        app:layout_constraintTop_toBottomOf="@id/til_namaDepan"-->
<!--        tools:ignore="MissingConstraints">-->

<!--        <EditText-->
<!--            android:id="@+id/et_namaBelakang"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:inputType="text" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/til_email"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/email"-->
<!--        app:layout_constraintTop_toBottomOf="@id/til_namaBelakang"-->
<!--        tools:ignore="MissingConstraints">-->

<!--        <EditText-->
<!--            android:id="@+id/et_email"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:inputType="text" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/til_password"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/password"-->
<!--        app:layout_constraintTop_toBottomOf="@id/til_email"-->
<!--        tools:ignore="MissingConstraints">-->

<!--        <EditText-->
<!--            android:id="@+id/et_password"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:inputType="text" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/til_confirmPassword"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="Konfirmasi Password"-->
<!--        app:layout_constraintTop_toBottomOf="@id/til_password"-->
<!--        tools:ignore="MissingConstraints">-->

<!--        <EditText-->
<!--            android:id="@+id/et_confirmPassword"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:inputType="text" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <Button-->
<!--        android:id="@+id/btn_daftar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/daftar"-->
<!--        app:layout_constraintTop_toBottomOf="@id/til_confirmPassword"-->
<!--        tools:ignore="MissingConstraints" />-->

</androidx.constraintlayout.widget.ConstraintLayout>